--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>AMQPManager</artifactId>
+    <artifactId>MKTBus</artifactId>
     <version>0.0.2</version>
 
     <properties>
