--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>MKTBus</artifactId>
-    <version>0.1.13</version>
+    <version>0.1.14</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -14,6 +14,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>github-artifacts</id>
+            <url>https://github.com/ipucci70/MKTBus/releases/tag/0.0.3</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -40,6 +46,11 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>33.4.0-jre</version>
+        </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>MKTUtils</artifactId>
+            <version>0.1.3</version>
         </dependency>
     </dependencies>
 </project>
